[package]
name = "pentas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
gtk4 = "0.9.4"
pangocairo = "0.20.4"
regex = "1.10.6"
terminal_size = "0.4.1"
thiserror = "1.0.59"

[build-dependencies]
glib-build-tools = "0.20.0"
